--- a/index.html
+++ b/index.html
@@ -1,15 +1,47 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>It Park!</title>
-<meta name="description" content="">
-<meta name="keywords" content="">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<link href="style.css" rel="stylesheet">
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Examples</title>
+	<meta name="description" content="">
+	<meta name="keywords" content="">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<link href="" rel="stylesheet">
+	<link href="style.css" rel="stylesheet">
 </head>
 <body>
-    Hello, ItPark!
+
+<div class="container">
+    <p> <input id="a"/> x <sup> 2 </sup> + <input id="b"/> x + <input id="c"/> = 0 </p>  
+    <br/>
+    <button> РЕШИТЬ! </button>
+
+    <script type="text/javascript">
+    	$("button").click(function function_name(argument) {
+    		var a = $("#a").val();
+	    	var b = $("#b").val();
+    		var c = $("#c").val();
+    		var x1, x2;
+
+    		//НАПИШИТЕ СВОЙ КОД ЗДЕСЬ
+
+
+ 
+
+
+
+    		//-----------------------
+
+    		if(x1 != undefined && x2 != undefined)
+    			alert("Два корня: " +  x1 + " " + x2);	
+    		else if(x1 != undefined)
+    			alert("Один корень: " + x1);
+    		else
+    			alert("Нет корней");
+    	});
+    </script>
+
+</div>
 </body>
 </html>
