--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	
+	<style type="text/css">
+
+		.container {
+			padding-top: 250px;
+			text-align: center;
+			font-size: 250%;
+		}
+
+		#a, #b, #c {
+			width: 25px;
+			font-size: 100%;
+			text-align: right;
+		}
+
+	</style>
 	<link href="" rel="stylesheet">
 	<link href="style.css" rel="stylesheet">
 </head>
