--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
     		var c = $("#c").val();
     		var x1, x2;
 
-    		//НАПИШИТЕ СВОЙ КОД ЗДЕСЬ
+    		var d = b * b - 4*a*c;
+if(d>0) {
+           x1=(-b + math.sqrt(d)) / (a*2) 
+		   x2=(-b - math.sqrt(d)) / (a*2)} 
+      else if (d<0) {
+	      alert('нет корней')
+		     }
+	  else if (d==0)	{
+               x1=(-b)/ (2*a) 
+        }			  
 
 
  
