--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body>
-
+<div style="text-align: center;">
+	<a href="timer.html">Пример таймера</a>
+</div
+	
 <div class="container">
     <p> <input id="a"/> x <sup> 2 </sup> + <input id="b"/> x + <input id="c"/> = 0 </p>  
     <br/>
