--- a/index.html
+++ b/index.html
@@ -1,68 +1,77 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<title>Examples</title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-	
-	<style type="text/css">
-
-		.container {
-			padding-top: 250px;
-			text-align: center;
-			font-size: 250%;
-		}
-
-		#a, #b, #c {
-			width: 25px;
-			font-size: 100%;
-			text-align: right;
-		}
-
-	</style>
-	<link href="" rel="stylesheet">
-	<link href="style.css" rel="stylesheet">
-</head>
-<body>
-<div style="text-align: center;">
-	<a href="timer.html">Пример таймера</a>
-</div
-	
-<div class="container">
-    <p> <input id="a"/> x <sup> 2 </sup> + <input id="b"/> x + <input id="c"/> = 0 </p>  
-    <br/>
-    <button> РЕШИТЬ! </button>
-
-    <script type="text/javascript">
-    	$("button").click(function function_name(argument) {
-    		var a = $("#a").val();
-	    	var b = $("#b").val();
-    		var c = $("#c").val();
-    		var x1, x2;
-			
-		var d = b * b  - 4 * a * c;
-		
-		if(d > 0) {
-			x1 = (-b + Math.sqrt(d)) / (2 * a);
-			x2 = (-b - Math.sqrt(d)) / (2 * a);
-		}
-		else if(d == 0) {
-			x1 = (-b) / (2 * a);
-		}
-			
-
-    		if(x1 != undefined && x2 != undefined)
-    			alert("Два корня: " +  x1 + " " + x2);	
-    		else if(x1 != undefined)
-    			alert("Один корень: " + x1);
-    		else
-    			alert("Нет корней");
-    	});
-    </script>
-
-</div>
-</body>
-</html>
+ <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+ -<title>Examples</title>
+ +<title>It Park!</title>
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <link href="style.css" rel="stylesheet">
+ -<script src="https://vk.com/js/api/openapi.js?136" type="text/javascript"></script>
+ -<script type="text/javascript">
+ -    VK.init({
+ -        apiId: 5709426
+ -    });
+ -
+ -    VK.Auth.login(function (response) {
+ -        if (response.session) {
+ -            vk_user_id = response.session.user.id;
+ -            $("#user_id").html(response.session.user.id);
+ -            $("#fname").html(response.session.user.first_name);
+ -            $("#lname").html(response.session.user.last_name);
+ -            if (response.settings) {
+ -            }
+ -        } else {
+ -            $("#lname").html = "ой";
+ -        }
+ -    });
+ -</script>
+  </head>
+  <body>
+ -    
+ -    <input id=""/>
+ -    <button id="load">Узнать</button>
+ -    <button id="get_photo">Получить аватар!</button>
+ -    <div id="panel"></div>
+ -
+ -    <p id="user_id"></p>
+ -    <p id="fname"></p>
+ -    <p id="lname"></p>
+ -
+ -    <img id="vk_avatar" />
+ -
+ -
+ -    <script type="text/javascript">
+ -        
+ -        var vk_user_id = 1;
+ -
+ -        $("#load").click(function () {
+ -            VK.Auth.login(function (response) {
+ -                if (response.session) {
+ -                    vk_user_id = response.session.user.id;  
+ -                    $("#user_id").html(response.session.user.id);
+ -                    $("#fname").html(response.session.user.first_name);
+ -                    $("#lname").html(response.session.user.last_name);
+ -                    if (response.settings) {
+ -                        /* Выбранные настройки доступа пользователя, если они были запрошены */
+ -                    }
+ -                } else {
+ -                    $("#lname").html = "ой";
+ -                }
+ -            });
+ -        });
+ -
+ -        $("#get_photo").click(function () {
+ -            VK.api("users.get", { user_ids: [vk_user_id], fields: "photo_200" }, function (data) {
+ -                console.log(data);
+ -                $("#vk_avatar").attr("src", data.response[0].photo_200);
+ -            });
+ -        });
+ -
+ -
+ -    </script>
+ -
+ +    Hello, ItPark!
+  </body>
+  </html>
+ Lock conversation
