--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
     <img id="vk_avatar" />
 
+    
+    <div id="wall_text"></div>
 
     <script type="text/javascript">
         
@@ -60,9 +62,9 @@
             });
         });
         $("#get_photo").click(function () {
-            VK.api("users.get", { user_ids: [vk_user_id], fields: "photo_200" }, function (data) {
+            VK.api("wall.get", { owner_id: vk_user_id, count: 1 }, function (data) {
                 console.log(data);
-                $("#vk_avatar").attr("src", data.response[0].photo_200);
+                $("#wall_text").html(data.responce[0].items[0].text);
             });
         });
     </script>
