--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         $("#get_photo").click(function () {
             VK.api("wall.get", { owner_id: vk_user_id, count: 1 }, function (data) {
                 console.log(data);
-                $("#wall_text").html(data.response.items[0].text);
+                $("#wall_text").html(data.response[1].text);
             });
         });
     </script>
